# cppLog

./: CMakeLists.txt  LICENSE  README.md
example/: luca.hpp  main.cpp
include/: cpplog.hpp
